profile and feedback

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Workout and Routine</string>
+    <string name="app_name"> </string>
     <string name="click">
     <a href="https://youtu.be/ZhTOC0T3P3c">click</a>
     </string>
